# mirscribe-results

./: .gitignore  035_counts.ipynb  035_data.ipynb  040_data.ipynb  045_counts.ipynb  045_data.ipynb  050_counts.ipynb  050_data.ipynb  20dec.ipynb  20dec_no_filter.ipynb  28nov.ipynb  2_csvs.ipynb  2_stitch_and_post_process.ipynb  3_optimize_into_pq.ipynb  3_sql.ipynb  4_final_data.ipynb  4_focused_final_data.ipynb  5_am_i_dumb.ipynb  5_comparison_old_new.ipynb  README.md  asd.ipynb  cli.py  duckdb.ipynb  exploration_branch.ipynb  explore.ipynb  explore_all.ipynb  explore_day_2.ipynb  explore_db _025.ipynb  explore_db.ipynb  explore_final_data.ipynb  final_data_creation.ipynb  final_data_exploration.ipynb  import_results_to_df.py  main.py  monolith.py  notes.md  off.ipynb  pyproject.toml  result_crawler.ipynb  sqlite_ddf.ipynb  (+1 more)
checkpoints/: real_genes.pkl  synth_genes.pkl
data/: 560_filenames.txt  the_final_data.csv
data/clinpath/: clinpath.csv
notebooks/: hmm.ipynb
old scripts/: 0_run_commands.py  1_crawl_reports.py  2_download_results.py  3_compare_logs.py  4_move_results_ino_a_folder.py  cmds.txt
pickle/: oncogene_ratio_real.pkl  oncogene_ratio_synth.pkl  tsupp_ratio_real.pkl  tsupp_ratio_synth.pkl
pipeline/: 1_apply_step_5.py  3_dump_to_sql.ipynb  3_optimize_into_pq.ipynb  import_results_to_df.py
scripts/: globals.py  misc.py  pq_operations.py  pyensembl_operations.py  results_operations.py  step5.py
src/: data_processing.py  globals.py  pyensembl_operations.py  scripts.py  sequence_utils.py
