[tool.poetry]
name = "mirscribe-results"
version = "0.1.0"
description = ""
authors = ["tasbasmn <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"
paramiko = "^3.5.0"
pandas = "<2.1.0"
pyarrow = "14.0.2"
pyensembl = "^2.3.13"
numpy = "<2.0.0"
humanize = "^4.11.0"
dask = {extras = ["diagnostics"], version = "^2024.11.2"}
bokeh = "^3.6.1"
dask-expr = "^1.1.19"
jinja2 = "^3.1.4"
duckdb = "^1.1.3"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.36"
polars = "^0.20.2"
vaex = "^4.17.0"
matplotlib-venn = "^1.1.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
